// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diagnose-429-errors - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "**TROUBLESHOOTING SKILL** - Diagnose and resolve HTTP 429 rate limiting errors in Microsoft Foundry (Azure AI Foundry / Azure OpenAI).
USE FOR: 429 error, rate limit exceeded, RateLimitReached, Too Many Requests, throttled, quota exceeded, token rate limit, TPM limit, RPM limit, retry after, capacity planning, "exceeded the token rate limit", deployment scaling, burst limits, multi-region scaling.
DO NOT USE FOR: model deployment from scratch (use microsoft-foundry), authentication errors (use microsoft-foundry rbac), model availability checks (use check-model-availability).
INVOKES: \`azure__foundry\` (deployment details), \`mcp__plugin_azure_azure__quota\` (usage), \`azure__monitor\` (log queries) MCP tools for diagnostics.
FOR CLI USERS: Azure CLI fallback documented for each step.
",
  "extractedKeywords": [
    "429",
    "after",
    "authentication",
    "availability",
    "azure",
    "azure__foundry",
    "azure__monitor",
    "burst",
    "capacity",
    "check-model-availability",
    "checks",
    "cli",
    "deploy",
    "deployment",
    "details",
    "diagnose",
    "diagnostic",
    "diagnostics",
    "documented",
    "each",
    "error",
    "errors",
    "exceeded",
    "fallback",
    "foundry",
    "from",
    "http",
    "invokes",
    "limit",
    "limiting",
    "limits",
    "many",
    "mcp",
    "mcp__plugin_azure_azure__quota",
    "microsoft",
    "microsoft-foundry",
    "model",
    "monitor",
    "multi-region",
    "openai",
    "planning",
    "queries",
    "quota",
    "rate",
    "ratelimitreached",
    "rbac",
    "requests",
    "resolve",
    "retry",
    "scaling",
    "scratch",
    "skill",
    "step",
    "throttled",
    "token",
    "tools",
    "troubleshooting",
    "usage",
    "users",
  ],
  "name": "diagnose-429-errors",
}
`;

exports[`diagnose-429-errors - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "429",
  "after",
  "authentication",
  "availability",
  "azure",
  "azure__foundry",
  "azure__monitor",
  "burst",
  "capacity",
  "check-model-availability",
  "checks",
  "cli",
  "deploy",
  "deployment",
  "details",
  "diagnose",
  "diagnostic",
  "diagnostics",
  "documented",
  "each",
  "error",
  "errors",
  "exceeded",
  "fallback",
  "foundry",
  "from",
  "http",
  "invokes",
  "limit",
  "limiting",
  "limits",
  "many",
  "mcp",
  "mcp__plugin_azure_azure__quota",
  "microsoft",
  "microsoft-foundry",
  "model",
  "monitor",
  "multi-region",
  "openai",
  "planning",
  "queries",
  "quota",
  "rate",
  "ratelimitreached",
  "rbac",
  "requests",
  "resolve",
  "retry",
  "scaling",
  "scratch",
  "skill",
  "step",
  "throttled",
  "token",
  "tools",
  "troubleshooting",
  "usage",
  "users",
]
`;
